<resources>
    <string name="app_name">TodoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="todo_list_fragment_label">Todo List</string>
    <string name="add_update_todo_fragment_label">Add Todo</string>
    <string name="update_todo_fragment_label">Update Todo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_data">No Todos added yet!</string>
    <string name="add_todo">Add Todo</string>
    <string name="update_todo">Update Todo</string>
    <string name="todo_title">Title</string>
    <string name="todo_description">Description</string>
    <string name="todo_priority">Priority</string>
    <string name="action_search">Search</string>
    <string name="high_priority">High Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_sort_by">Sort By</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="delete_all_todos">Delete All Todos</string>
    <string name="delete_all_todo_message">Are you sure to delete all todos?</string>
    <string name="delete_todo_message">Are you sure to delete this todo?</string>
    <string name="update_todo_successful">Update todo successful!</string>
    <string name="delete_todo_successful">Delete todo successful!</string>
    <string name="create_todo_successful">Create todo successful!</string>
    <string name="undo">Undo</string>

    <string-array name="todo_priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>