<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rastete.todoapp.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <group >
        <item
            android:id="@+id/action_sort_by"
            android:title="@string/action_sort_by">
            <menu >
                <item
                    android:checkable="true"
                    android:id="@+id/action_sort_high_priority"
                    android:title="@string/high_priority" />
                <item
                    android:checkable="true"
                    android:id="@+id/action_sort_low_priority"
                    android:title="@string/low_priority" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
</menu>