<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.features.add_update_todo.AddUpdateTodoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_todoTitle_addUpdateTodoF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_todoTitle_addUpdateTodoF"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spn_todoPriority_addUpdateTodoF"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:dropDownVerticalOffset="20dp"
        android:entries="@array/todo_priorities"
        android:hint="@string/todo_priority"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_todoTitle_addUpdateTodoF" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_todoDescription_addUpdateTodoF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:hint="@string/todo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_todoPriority_addUpdateTodoF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_todoDescription_addUpdateTodoF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="3"
            android:maxLines="10"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>